IGNITE-19152 Use schema information in LocalFileConfigurationStorage